<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="23"
    tools:context=".Dat_vag" >

    <SurfaceView
        android:id="@+id/sfv_vag"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="17" />

    <SurfaceView
        android:id="@+id/sfv_jab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3" />

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3" >

        <TextView
            android:id="@+id/horaJab"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Hora"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/temp1Jab"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Temp1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/temp2Jab"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Temp2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/temp3Jab"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Temp3"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/temp4Jab"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Temp4"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <!-- android:textSize="@dimen/px30" -->
    </TableLayout>

</LinearLayout>