<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- android:paddingBottom="@dimen/activity_vertical_margin" -->
    <!-- android:paddingLeft="@dimen/activity_horizontal_margin" -->
    <!-- android:paddingRight="@dimen/activity_horizontal_margin" -->
    <!-- android:paddingTop="@dimen/activity_vertical_margin" -->


    <!-- <TextView -->
    <!-- android:id="@+id/section_label" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" /> -->

    <TextView
        android:id="@+id/posGru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gru_donde"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/llegoGru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gru_llego"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/hora"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/gru_hora"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/Label_Ser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/Ser_Dat"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <SurfaceView
        android:id="@+id/surfaceGrua"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>