<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.vagoscorp.vccompost.SaveRFiles" >
    
<!--         android:paddingBottom="@dimen/activity_vertical_margin" -->
<!--     android:paddingLeft="@dimen/activity_horizontal_margin" -->
<!--     android:paddingRight="@dimen/activity_horizontal_margin" -->
<!--     android:paddingTop="@dimen/activity_vertical_margin" -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FileNames" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/nombredc"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:hint="@string/FileNamesH"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="Save"
            android:text="@string/GuardarRutina" />

    </LinearLayout>

</LinearLayout>