<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    
    tools:context="com.vagoscorp.vccompost.Routine" >
    

<!--     android:paddingLeft="@dimen/activity_horizontal_margin" -->
<!-- 	 android:paddingRight="@dimen/activity_horizontal_margin" -->
<!--     android:paddingTop="@dimen/activity_vertical_margin" -->
<!--     android:paddingBottom="@dimen/activity_vertical_margin" -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="20" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/SeccionA" />

        <SurfaceView
            android:id="@+id/reactorA"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
    
<!--     <TextView -->
<!--         android:id="@+id/ptextA" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="@string/hello_world" /> -->
    
<!--     <Spinner -->
<!--         android:id="@+id/spinnerA" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" /> -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/SeccionB" />

        <SurfaceView
            android:id="@+id/reactorB"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ptextA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />

        <Spinner
            android:id="@+id/spinnerA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/ptextB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />

        <Spinner
            android:id="@+id/spinnerB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>